--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ url = "/"
 
 [Author]
 name = "Lena Biresch"
-email = "mailto:lena.biresch@gmx.de"
+email = "mailto:MeMyselfAndMyAvatars@gmx.net"
 
 [Params]
 titel = "Me, Myself & My Avatars"
